fix(presentation): overflow
page à refaire, sémantique pas propre.

--- a/dev_project/public/css/style_presentation.css
+++ b/dev_project/public/css/style_presentation.css
@@ -10,6 +10,7 @@ body {
     font-family: 'Exo 2', sans-serif;
     position: relative;
     font-size: 2.25rem;
+    text-align: center;
 }
 
 .resFooter{
@@ -144,15 +145,25 @@ main{
 }
 
 .mockupImg{
+    margin: 0;
     margin-top: 50px;
     margin-bottom: 50px;
-    width: 100vw;
+    width: 100%;
     height: 66.60vw;
 }
 
 .mockupImg img{
     width: 100% !important;
     height: 100% !important;
+}
+
+.bgContainer{
+    overflow: hidden;
+}
+
+.mockupContainer{
+    width: 100%;
+    overflow: hidden;
 }
 
 @media (min-width: 800px){
@@ -199,5 +210,9 @@ main{
         height: 101%;
         width: 100.5%;
         transform: translate(-50%,-50%) rotate(2deg);
+    }
+    .mockupContainer{
+        width: fit-content;
+        width: -moz-fit-content;
     }
 }
